--- a/NOVA/index.html
+++ b/NOVA/index.html
@@ -12,6 +12,6 @@
 </style>
 </head>
 <body>
-  <iframe width="1120" height="630" src="https://www.youtube.com/embed/eLE5lBPhRQQ?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  <iframe width="1120" height="630" src="https://www.youtube.com/embed/eLE5lBPhRQQ?rel=0&amp;autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </body>
 </html>
